<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.expungement.alloy</groupId>
	<artifactId>alloy-runner</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>alloy-runner</name>
	<description>Project to run alloy and give response as JSON</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.json</groupId>
		    <artifactId>json</artifactId>
		    <version>20240303</version>
		</dependency>
		
	    <dependency>
	        <groupId>org.alloytools</groupId>
	        <artifactId>alloy</artifactId>
		    <version>6.2.0</version>
	        <exclusions>
	            <exclusion>
	                <groupId>org.slf4j</groupId>
	                <artifactId>slf4j-api</artifactId>
	            </exclusion>
	            <exclusion>
	                <groupId>ch.qos.logback</groupId>
	                <artifactId>logback-classic</artifactId>
	            </exclusion>
	        </exclusions>
	    </dependency>
	    
	    <dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.alloy.application</artifactId>
		    <version>6.2.0</version>
		</dependency>

		<dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.alloy.core</artifactId>
		    <version>6.2.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.alloy.extra</artifactId>
		    <version>6.2.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.alloy.lsp</artifactId>
		    <version>6.2.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.alloy.cli</artifactId>
		    <version>6.2.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.alloytools</groupId>
		    <artifactId>org.alloytools.api</artifactId>
		    <version>6.2.0</version>
		</dependency>
	    
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-logging</artifactId>
		    <exclusions>
		        <exclusion>
		            <groupId>ch.qos.logback</groupId>
		            <artifactId>logback-classic</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>
		
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-simple</artifactId>
		    <scope>runtime</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>
